<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/cm_toggle_button"
    android:layout_below="@+id/admob_banner"
    android:scrollbars="none"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2dp"
            android:layout_marginRight="@dimen/_2dp"
            app:cardBackgroundColor="@color/card_view_color"
            app:cardCornerRadius="@dimen/_2dp"
            app:cardElevation="@dimen/_1dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/myriad_probold"
                        android:inputType="textCapCharacters"
                        android:padding="@dimen/_13dp"
                        android:text="@string/color_temperature"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_20sp" />

                    <ImageView
                        android:id="@+id/info_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10dp"
                        android:src="@drawable/ic_info_outline_black_24dp" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/light_frequency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_1"
                            style="@style/lightFrequencyIV"
                            android:src="@drawable/moon" />

                        <ImageView
                            android:id="@+id/iv_2"
                            style="@style/lightFrequencyIV"
                            android:src="@drawable/candle" />

                        <ImageView
                            android:id="@+id/iv_3"
                            style="@style/lightFrequencyIV"
                            android:src="@drawable/dawn" />

                        <ImageView
                            android:id="@+id/iv_4"
                            style="@style/lightFrequencyIV"
                            android:src="@drawable/bulb" />

                        <ImageView
                            android:id="@+id/iv_5"
                            style="@style/lightFrequencyIV"
                            android:src="@drawable/light" />

                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:fontFamily="@font/myriad_probold"
                    android:labelFor="@+id/intensity_value"
                    android:paddingLeft="@dimen/_13dp"
                    android:text="@string/transparency"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sp" />


                <TextView
                    android:id="@+id/cp_alpha_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_13dp"
                    android:textColor="@color/thumb_color"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/cp_alpha_circleSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:max="80"
                    android:maxHeight="@dimen/_5dp"
                    android:min="1"
                    android:progressDrawable="@drawable/custom_seekbar_progress_background"
                    android:thumb="@drawable/shape_seek_bar_text_thumb"
                    android:thumbOffset="@dimen/_5dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2dp"
            android:layout_marginRight="@dimen/_2dp"
            app:cardBackgroundColor="@color/card_view_color"
            app:cardCornerRadius="@dimen/_2dp"
            app:cardElevation="@dimen/_1dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/myriad_probold"
                        android:padding="@dimen/_13dp"
                        android:text="@string/custom_color_temperature"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_20sp" />

                    <!--  <Switch
                          android:id="@+id/cp_useColor_switch"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:layout_marginLeft="5dp" />-->
                </LinearLayout>

                <com.workouts.utils.ColorSeekBar
                    android:id="@+id/cp_colorSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:padding="@dimen/_5dp"
                    android:visibility="visible"
                    app:barHeight="@dimen/_10dp"
                    app:colors="@array/material_colors"
                    app:thumbHeight="@dimen/_30dp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2dp"
            android:layout_marginRight="@dimen/_2dp"
            app:cardBackgroundColor="@color/card_view_color"
            app:cardCornerRadius="@dimen/_2dp"
            app:cardElevation="@dimen/_1dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/myriad_probold"
                        android:labelFor="@+id/intensity_value"
                        android:padding="@dimen/_13dp"
                        android:text="@string/brightness"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_20sp" />

                    <!-- <Switch
                         android:id="@+id/cp_useBrightness_switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp" />-->
                </LinearLayout>

                <TextView
                    android:id="@+id/cp_brightness_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_5dp"
                    android:paddingLeft="@dimen/_13dp"
                    android:textColor="@color/thumb_color"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/cp_brightness_circleSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:max="100"
                    android:maxHeight="@dimen/_5dp"
                    android:min="1"
                    android:progressDrawable="@drawable/custom_seekbar_progress_background"
                    android:thumb="@drawable/shape_seek_bar_text_thumb"
                    android:thumbOffset="@dimen/_5dp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_setting_notification_on_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2dp"
            android:layout_marginRight="@dimen/_2dp"
            app:cardBackgroundColor="@color/card_view_color"
            app:cardCornerRadius="@dimen/_2dp"
            app:cardElevation="@dimen/_1dp"
            android:visibility="gone"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/daily_notify_detail"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/myriad_probold"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="@dimen/_12dp"
                    android:text="@string/toggle_notification_bar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sp" />

                <Switch
                    android:id="@+id/mute_notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>